<resources>
    <string name="app_name">RID Guard</string>
    <string name="bt_rationale">Bluetooth en apparaten in de buurt zijn nodig om drones te detecteren.</string>
    <string name="nearby_not_granted">Geef toestemming voor apparaten in de buurt, Bluetooth en wifi.</string>
    <string name="bt_not_supported">Bluetooth wordt niet ondersteund op dit toestel.</string>
    <string name="bt_not_enabled_leaving">Zet Bluetooth aan om Remote ID-signalen te ontvangen.</string>
    <string name="wifi_not_enabled_leaving">Wifi staat uit. Bluetooth-detectie kan wel blijven werken.</string>
    <string name="info">Info</string>
    <string name="rid_guard_title">RID Guard</string>
    <string name="rid_guard_start">Detectie starten</string>
    <string name="rid_guard_stop">Stoppen</string>
    <string name="rid_guard_silence">30 min. stil</string>
    <string name="rid_guard_silence_short">Dempen</string>
    <string name="rid_guard_settings">Instellingen</string>
    <string name="rid_guard_permissions">Apprechten</string>
    <string name="rid_guard_battery">Batterij</string>
    <string name="rid_guard_silenced">Waarschuwingen zijn 30 minuten gedempt</string>
    <string name="rid_guard_status_default">Detectie staat stil</string>
    <string name="rid_guard_status">Status: %1$s</string>
    <string name="rid_guard_state_idle">Detectie staat stil</string>
    <string name="rid_guard_state_scanning">Detectie is actief</string>
    <string name="rid_guard_device_check_placeholder">Telefooncontrole wordt geladen…</string>
    <string name="rid_guard_transports_default">Actieve ontvangst: geen</string>
    <string name="rid_guard_transports">Actieve ontvangst: %1$s</string>
    <string name="rid_guard_none">geen</string>
    <string name="rid_guard_last_scan_idle">Laatste Remote ID-signaal: nog niets ontvangen</string>
    <string name="rid_guard_last_scan_value">Laatste Remote ID-signaal: %1$d sec. geleden</string>
    <string name="rid_guard_map_disabled">Kaart niet actief. Schakel de kaart in bij Instellingen; internet is alleen voor de kaart nodig.</string>
    <string name="rid_guard_detected_drones">Gedetecteerde drones</string>
    <string name="rid_guard_active">RID Guard is actief</string>
    <string name="rid_guard_scanning">Zoekt naar Remote ID-signalen</string>
    <string name="rid_guard_scanning_transports">Ontvangst via %1$s</string>
    <string name="rid_guard_channel_name">RID Guard-detectie</string>
    <string name="rid_guard_channel_description">Permanente melding zolang RID Guard naar Remote ID-signalen zoekt</string>
    <string name="rid_guard_service_start_failed">Android kon de achtergrondscanner niet starten. Controleer apprechten, locatie en batterij-instellingen.</string>
    <string name="rid_guard_bluetooth_required">Bluetooth moet aanstaan om detectie te starten.</string>
    <string name="rid_guard_bluetooth_not_supported">Deze telefoon heeft geen bruikbare Bluetooth LE-scanner.</string>
    <string name="rid_guard_enable_location">Zet Locatie aan en ga daarna terug naar RID Guard.</string>
    <string name="rid_guard_wifi_optional">Wifi staat uit. RID Guard start alleen Bluetooth-detectie.</string>
    <string name="rid_guard_status_ok">✓</string>
    <string name="rid_guard_status_problem">–</string>
    <string name="rid_guard_check_bluetooth">Bluetooth aan</string>
    <string name="rid_guard_check_long_range">Bluetooth 5 Long Range volgens toestel beschikbaar</string>
    <string name="rid_guard_check_wifi">Wifi aan voor beacon-detectie</string>
    <string name="rid_guard_check_wifi_aware">Wi-Fi Aware/NAN beschikbaar</string>
    <string name="rid_guard_check_location">Locatievoorziening aan</string>
    <string name="rid_guard_check_permissions">Benodigde apprechten toegestaan</string>
    <string name="rid_guard_check_battery">Uitgesloten van batterijoptimalisatie</string>
    <string name="rid_guard_alert_rules">Waarschuwingsregels</string>
    <string name="rid_guard_radius">Waarschuwingsafstand</string>
    <string name="rid_guard_altitude_window">Hoogtevenster gebruiken</string>
    <string name="rid_guard_altitude_min">Minimale hoogteverschil (m)</string>
    <string name="rid_guard_altitude_max">Maximale hoogteverschil (m)</string>
    <string name="rid_guard_cooldown">Wachttijd per drone (sec.)</string>
    <string name="rid_guard_ignore">Negeren</string>
    <string name="rid_guard_ignore_30m">30 min. negeren</string>
    <string name="rid_guard_ignore_ids">Drone-ID’s handmatig negeren</string>
    <string name="rid_guard_ignore_ids_summary">Scheid UAS-ID’s met komma’s of nieuwe regels.</string>
    <string name="rid_guard_logging">Logboek</string>
    <string name="rid_guard_log_retention">Logbestanden bewaren (uren)</string>
    <string name="rid_guard_map">Kaart</string>
    <string name="rid_guard_map_toggle">Kaartweergave inschakelen</string>
    <string name="rid_guard_map_toggle_summary">De kaart gebruikt internet; detectie zelf niet.</string>
    <string name="rid_guard_tips">Tips</string>
    <string name="rid_guard_location_tip_title">Locatietoestemming</string>
    <string name="rid_guard_location_tip">Android vereist locatie voor de combinatie van Bluetooth-, wifi- en afstandsdetectie.</string>
    <string name="rid_guard_wifi_tip_title">Beperking van wifi-scans</string>
    <string name="rid_guard_wifi_tip">Ontwikkelaarsopties → Beperking van wifi-scans uitschakelen kan beacon-detectie verbeteren.</string>
    <string name="Clear">Clear</string>
    <string name="Help">Help</string>
    <string name="Log_enabled">Log enabled</string>
    <string name="Show_log_location">Show log location</string>
    <string name="coded_phy_not_supported">Coded Phy not supported</string>
    <string name="coded_phy_supported">Coded Phy supported</string>
    <string name="ea_not_supported">Extended Advertising not supported</string>
    <string name="ea_supported">Extended Advertising supported</string>
    <string name="nan_not_supported">WiFi NaN not supported</string>
    <string name="nan_supported">WiFi NaN supported</string>
    <string name="wifi_beacon_scan_not_supported">WiFi Beacon Scan not supported</string>
    <string name="wifi_beacon_scan_supported">WiFi Beacon Scan supported</string>
    <string name="Logging_to">Logging to </string>
    <string name="Logging_not_activated">Logging not activated</string>
    <string name="Map_Type">Map Type</string>
    <string name="Map_Type_Normal">Normal</string>
    <string name="Map_Type_Satellite">Satellite</string>
    <string name="Map_Type_Terrain">Terrain</string>
    <string name="Map_Type_Hybrid">Hybrid</string>
    <string name="Map_Type_None">None</string>
    <string name="copyright_osm">©https://www.openstreetmap.org/copyright contributors</string>
    <string name="permission_rationale_location">Locatietoegang is nodig om Remote ID-signalen aan een positie en afstand te koppelen.</string>
    <string name="permission_required_toast">Geef toestemming voor locatie en apparaten in de buurt om detectie te starten.</string>
    <string name="drone_icon_content_description">Drone icon</string>
    <string name="bluetooth_help_heading">Bluetooth</string>
    <string name="bluetooth_help_text">Sample</string>
    <string name="beacon_help_heading">Wi-Fi Beacon</string>
    <string name="beacon_help_text">Sample</string>
    <string name="nan_help_heading">Wi-Fi NaN</string>
    <string name="nan_help_text">Sample</string>
    <string name="Connection">Connection</string>
    <string name="unknown">–</string>
    <string name="RSSI">RSSI</string>
    <string name="MAC">MAC</string>
    <string name="Started">Started</string>
    <string name="Last_seen">Last seen</string>
    <string name="Msg_8710">Msg &#8710;</string>
    <string name="Distance">Distance</string>
    <string name="Basic_ID_1">Basic ID 1</string>
    <string name="Type">Type</string>
    <string name="ID_Type">ID Type</string>
    <string name="UAS_ID">UAS ID</string>
    <string name="Basic_ID_2">Basic ID 2</string>
    <string name="Location">Location</string>
    <string name="Latitude">Latitude</string>
    <string name="Longitude">Longitude</string>
    <string name="Altitude_Press">Altitude Press.</string>
    <string name="Alt_Geod">Alt. Geod.</string>
    <string name="Direction">Direction</string>
    <string name="Status">Status</string>
    <string name="Hori_Speed">Hori. Speed</string>
    <string name="Vert_Speed">Vert. Speed</string>
    <string name="Height">Height</string>
    <string name="Height_Over">Height Over</string>
    <string name="Hori_Accuracy">Hori. Accuracy</string>
    <string name="Vert_Acc">Vert. Acc.</string>
    <string name="Baro_Acc">Baro Acc.</string>
    <string name="Speed_Acc">Speed Acc.</string>
    <string name="Time_Acc">Time Acc.</string>
    <string name="Timestamp">Timestamp</string>
    <string name="Self_ID">Self ID</string>
    <string name="Operation">Operation</string>
    <string name="System_Operator">System/Operator</string>
    <string name="Location_Type">Location Type</string>
    <string name="System_Altitude">Altitude</string>
    <string name="System_Latitude">Latitude</string>
    <string name="System_Longitude">Longitude</string>
    <string name="Area_Count">Area Count</string>
    <string name="Area_Radius">Area Radius</string>
    <string name="Area_Ceiling">Area Ceiling</string>
    <string name="Area_Floor">Area Floor</string>
    <string name="Classification">Classification</string>
    <string name="Category">Category</string>
    <string name="Class">Class</string>
    <string name="System_Timestamp">Timestamp</string>
    <string name="Operator_Info">Operator ID</string>
    <string name="Operator_ID">Operator ID</string>
    <string name="Authentication">Authentication</string>
    <string name="Auth_Type">Type</string>
    <string name="Auth_Length">Length</string>
    <string name="Auth_Timestamp">Timestamp</string>
    <string name="Auth_Data">Authentication</string>
    <string name="bluetoothHelp">All devices should be able to receive Bluetooth 4 Legacy Advertising remote ID signals.&lt;br&gt;&lt;br&gt;
        To receive Bluetooth 5 Long Range remote ID signals, the device must support the &quot;Coded Phy&quot; feature and also the &quot;Extended Advertising&quot; feature.&lt;br&gt;&lt;br&gt;
        See the claimed support for this device for these features in the options menu.&lt;br&gt;&lt;br&gt;
        Please be advised that even with those features supported, the device is not necessarily able to pick up the Long Range signals or it will only do that in limited time intervals.&lt;br&gt;</string>
    <string name="beaconHelp">All devices running Android 6 (Marshmallow) or newer should be able to receive Wi-Fi Beacon remote ID signals.&lt;br&gt;&lt;br&gt;
        The reception rate can vary a lot from one device to another, depending on the HW and SW.&lt;br&gt;&lt;br&gt;
        The reception rate for Wi-Fi Beacon remote ID signals can to some extent be improved by disabling Wi-Fi scan &lt;a href=&quot;https://developer.android.com/guide/topics/connectivity/wifi-scan#wifi-scan-throttling&quot;&gt;throttling&lt;/a&gt;.&lt;br&gt;&lt;br&gt;
        Enable the &lt;a href=&quot;https://developer.android.com/studio/debug/dev-options&quot;&gt;Android Developer Mode&lt;/a&gt; by opening the Settings application.&lt;br&gt;&lt;br&gt;
        Find the SW information (possibly in the &quot;About Phone&quot; menu) and click 7 times on the &quot;Build Number&quot;.&lt;br&gt;&lt;br&gt;
        Go back, find the &quot;Developer options&quot; menu, scroll to &quot;Wi-Fi scan throttling&quot; and disable it.&lt;br&gt;</string>
    <string name="nanHelp">Reception of Wi-Fi Neighbor-aware Network remote ID signals is possible only if the device has support for Wi-Fi NaN.&lt;br&gt;
        See the claimed support for this device for this feature in the options menu.&lt;br&gt;</string>
</resources>